# EshyMail

./: CMakeLists.txt
source/: accounts.h  composed_email.cpp  composed_email.h  email.cpp  email.h  main.cpp  ui.cpp  ui.h  util.cpp  util.h
